# YOLOrpg

./: CMakeLists.txt  Makefile  README.md  clean.sh
inc/: Character.hpp  Game.hpp
inc/Characters/: ACharacteristics.hh  Character.hh
inc/Game/: Game.hh  GameUtils.hh
res/texts/: synopsis.txt
src/: Character.cpp  Game.cpp  main.cpp
src/Characters/: ACharacteristics.cpp  Character.cpp
src/Game/: Game.cpp  GameUtils.cpp
